--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -218,6 +218,15 @@ body {
   .product-button.added-to-cart {
     background-color: grey; /* Grey when product is added */
   }
+
+  .product-description {
+    font-style: italic;
+  }
+
+  .product-cost {
+    color: red;
+  }
+
   @media (max-width: 1200px) {
     .product-card {
       flex: 1 1 calc(33.33% - 20px); /* Adjust width for 3 cards per row with 20px gap on medium screens */
